# my-whimsical-antivirus

./: .gitignore  Cargo.toml  README.md  antivirus.py  decision_engine.py  scanner.rust  signatures.json
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: confetti_big.py
src/: go.mod  logger.rs  main.go  main.rs  quarantine.rs  scanner.rs  signatures.rs  yara_scan.rs
