[package]
name = "my-whimsical-antivirus"
version = "0.1.0"
edition = "2021"

[dependencies]
yara = { version = "0.21", optional = true }
chrono = "0.4"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Enable YARA support (requires system libyara)
default = []
# reference optional dependency using the dep: prefix
yara = ["dep:yara"]
